Fix post limit sometimes adding a scrollbar to the page

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -41,6 +41,7 @@
 
 body {
 	margin: 0;
+	overflow: hidden;
 }
 
 #app,
